# cmd/heimdall-identity-io/api/swagger.json
@@ -247,109 +247,6 @@
                 }
             }
         },
-        "/v1/users/:userId/coins/:symbolGroup": {
-            "get": {
-                "description": "Returns all the user coins with symbol and wallet info (balances, etc)",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Coins"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "symbolGroup to filter",
-                        "name": "symbolGroup",
-                        "in": "path"
-                    },
-                    {
-                        "type": "string",
-                        "description": "ID of the user",
-                        "name": "userId",
-                        "in": "path"
-                    },
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd token here\u003e",
-                        "description": "Auth token from delegated relying party",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/main.Coin"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/server.ErrorResponse"
-                        }
-                    },
-                    "504": {
-                        "description": "if request times out",
-                        "schema": {
-                            "$ref": "#/definitions/server.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/users/{userID}/coins": {
-            "get": {
-                "description": "Provides a list of coins updated since version",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Coins"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Version of configuration already presented on client",
-                        "name": "version",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd token here\u003e",
-                        "description": "Auth token from delegated relying party",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.VersionedCoins"
-                        }
-                    },
-                    "204": {
-                        "description": "if known_version have been provided before",
-                        "schema": {
-                            "$ref": "#/definitions/main.VersionedCoins"
-                        }
-                    },
-                    "504": {
-                        "description": "if request times out",
-                        "schema": {
-                            "$ref": "#/definitions/server.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/users/{userId}/2fa/{twoFAOption}/values/{twoFAOptionValue}": {
             "delete": {
                 "description": "Confirms deletion of 2FA method",
@@ -613,6 +510,116 @@
                 }
             }
         },
+        "/v1/users/{userId}/coins": {
+            "get": {
+                "description": "Provides a list of coins updated since version",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Coins"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Version of configuration already presented on client",
+                        "name": "version",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID of the user",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd token here\u003e",
+                        "description": "Auth token from delegated relying party",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.VersionedCoins"
+                        }
+                    },
+                    "204": {
+                        "description": "if known_version have been provided before",
+                        "schema": {
+                            "$ref": "#/definitions/main.VersionedCoins"
+                        }
+                    },
+                    "504": {
+                        "description": "if request times out",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users/{userId}/coins/{symbolGroup}": {
+            "get": {
+                "description": "Returns all the user coins with symbol and wallet info (balances, etc)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Coins"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "symbolGroup to filter",
+                        "name": "symbolGroup",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID of the user",
+                        "name": "userId",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd token here\u003e",
+                        "description": "Auth token from delegated relying party",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Coin"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "504": {
+                        "description": "if request times out",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/users/{userId}/ion-connect-indexers": {
             "get": {
                 "description": "Returns indexers list for the user",
@@ -837,6 +844,65 @@
             }
         },
         "/v1/users/{userId}/wallet-views/{walletViewName}": {
+            "get": {
+                "description": "Get wallet view with extended information about coins (grouped)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Wallets"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the user",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Name of wallet view",
+                        "name": "walletViewName",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd token here\u003e",
+                        "description": "Auth token from delegated relying party",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.WalletView"
+                        }
+                    },
+                    "404": {
+                        "description": "if wallet view not found",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    },
+                    "504": {
+                        "description": "if request times out",
+                        "schema": {
+                            "$ref": "#/definitions/server.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Modifies wallet view referenced in url",
                 "produces": [
@@ -976,20 +1042,26 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Request params",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.StartDelegatedRecoveryReq"
-                        }
-                    },
-                    {
                         "type": "string",
                         "default": "ap-",
                         "description": "App ID",
                         "name": "X-Client-ID",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd token here\u003e",
+                        "description": "Auth token from delegated relying party",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID of the wallet",
+                        "name": "walletId",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -997,19 +1069,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.StartDelegatedRecoveryResp"
-                        }
-                    },
-                    "400": {
-                        "description": "if invalid 2FA code is provided",
-                        "schema": {
-                            "$ref": "#/definitions/server.ErrorResponse"
-                        }
-                    },
-                    "403": {
-                        "description": "if 2FA required",
-                        "schema": {
-                            "$ref": "#/definitions/server.ErrorResponse"
+                            "$ref": "#/definitions/main.GetNFTsResp"
                         }
                     },
                     "500": {
@@ -1029,6 +1089,34 @@
         }
     },
     "definitions": {
+        "accounts.CoinAggregation": {
+            "type": "object",
+            "properties": {
+                "totalBalance": {
+                    "$ref": "#/definitions/big.Int"
+                },
+                "wallets": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/accounts.CoinInWallet"
+                    }
+                }
+            }
+        },
+        "accounts.CoinInWallet": {
+            "type": "object",
+            "properties": {
+                "asset": {
+                    "$ref": "#/definitions/dfns.Asset"
+                },
+                "network": {
+                    "type": "string"
+                },
+                "walletId": {
+                    "type": "string"
+                }
+            }
+        },
         "accounts.CoinMapping": {
             "type": "object",
             "properties": {
@@ -1053,9 +1141,18 @@
                 "TwoFAOptionTOTPAuthenticator"
             ]
         },
+        "big.Int": {
+            "type": "object"
+        },
         "coins.Coin": {
             "type": "object",
             "properties": {
+                "contractAddress": {
+                    "type": "string"
+                },
+                "decimals": {
+                    "type": "integer"
+                },
                 "iconURL": {
                     "type": "string"
                 },
@@ -1082,9 +1179,30 @@
                 }
             }
         },
+        "coins.NFT": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dfns.Asset": {
+            "type": "object",
+            "additionalProperties": {}
+        },
         "main.Coin": {
             "type": "object",
             "properties": {
+                "contractAddress": {
+                    "type": "string"
+                },
+                "decimals": {
+                    "type": "integer"
+                },
                 "iconURL": {
                     "type": "string"
                 },
@@ -1108,6 +1226,23 @@
                 },
                 "syncFrequency": {
                     "$ref": "#/definitions/time.Duration"
+                }
+            }
+        },
+        "main.GetNFTsResp": {
+            "type": "object",
+            "properties": {
+                "network": {
+                    "type": "string"
+                },
+                "nfts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/coins.NFT"
+                    }
+                },
+                "walletId": {
+                    "type": "string"
                 }
             }
         },
@@ -1248,6 +1383,13 @@
         "main.WalletView": {
             "type": "object",
             "properties": {
+                "aggregation": {
+                    "description": "For GetWalletView, with total sum by symbol aggregation",
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/accounts.CoinAggregation"
+                    }
+                },
                 "coins": {
                     "type": "array",
                     "items": {
